# firefox

./: .dockerignore  .env.example  .env.test.example  .gitignore  CLAUDE.md  README.md  alembic.ini  chave_mestra.py  conftest.py  docker-compose.yml  gerar_token_acesso.py  main.py  package-lock.json  package.json  pyproject.toml  recreate_schemas.sql  setup_test_db.ps1  teste.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  openapi.json
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  csrf.py  exceptions.py  security.py  service_config.py  token_security.py  uuid_validator.py  validar_token.py
backend/app/crud/: certificado.py  empresa_convites.py  empresa_membros.py  empresas.py  feriados.py  global_urls.py  grupos.py  grupos_certificados.py  grupos_certificados_urls.py  grupos_usuarios.py  guards.py  planos_trabalho.py  ramos.py  regras_acesso.py  regras_acesso_hosts.py  regras_acesso_ips.py  regras_acesso_urls.py  usuarios.py  usuarios_ip_whitelist.py
backend/app/db/: base.py  database.py  models.py  permissions.py  session.py
backend/app/enums/: tipo_dia.py
backend/app/schemas/: auth.py  certificados.py  common.py  empresa_convites.py  empresa_membros.py  empresas.py  feriados.py  global_urls.py  grupos.py  grupos_certificados.py  grupos_certificados_urls.py  grupos_usuarios.py  planos_trabalho.py  ramos.py  regras_acesso.py  regras_acesso_hosts.py  regras_acesso_ips.py  regras_acesso_urls.py  token.py  usuarios.py  usuarios_ip_whitelist.py
backend/app/services/: __init__.py  (+3 more)
backend/migrations/: 20240205_ip_addresses_jsonb.sql  env.py
backend/tests/: conftest.py  test_auth.py  test_certificado_assinatura.py  test_certificados.py  test_certificados_der.py  test_companies.py  test_convites.py  test_dashboard.py  test_empresas.py  test_feriados.py  test_feriados_admin.py  test_global_urls.py  test_global_urls_admin.py  test_grupos.py  test_grupos_admin.py  test_grupos_certificados_admin.py  test_grupos_certificados_crud.py  test_grupos_certificados_urls.py  test_grupos_certificados_urls_admin.py  test_grupos_usuarios.py  test_grupos_usuarios_admin.py  test_grupos_usuarios_crud.py  test_integracao_acesso.py  test_planos_trabalho.py  test_planos_trabalho_admin.py  test_ramos_admin.py  test_regras_acesso.py  test_regras_acesso_admin.py  test_regras_acesso_crud.py  test_security.py  test_security_certificados.py  test_security_chave_mestra.py  test_security_ip_whitelist.py  test_security_password_validation.py  test_security_regras_acesso.py  test_usuarios.py  test_usuarios_ip_whitelist.py  test_usuarios_ip_whitelist_admin.py
browser/app/: xfiresecurity.exe.manifest
front/: .dockerignore  Dockerfile  index.html  nginx-frontend.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
front/src/: App.jsx  AppRoutes.jsx  dashboard.css  dashboard.jsx  dashboard_old.jsx  index.css  login.css  login.jsx  login.test.jsx  login_old.jsx  main.jsx
(+171 files in other folders)
