[project]
name = "backend-certificado"
version = "0.1.0"
description = ""
authors = [
    {name = "Guibson Moura",email = "mouraguibson12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.120.1,<0.121.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pycryptodomex (>=3.23.0,<4.0.0)",
    "pycryptodome-test-vectors (>=1.0.22,<2.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlacodegen (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "backend_certificado", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
